--- a/src/pages/evolution.astro
+++ b/src/pages/evolution.astro
@@ -18,7 +18,7 @@ import DefaultLayout from '../layouts/DefaultLayout.astro';
         <div class="col-span-3 p-4">
             
             <h1 class="section-title">Evaluation of animation</h1>
-            <ul>
+            <ul class="list-disc leading-relaxed">
             <li>A team can select any one of the subjects listed in the theme of the hackathon &ldquo;Celebrating India&rsquo;s Innovation&rdquo;.</li>
             <li>The participants are free to interpret the stories according to the current situations happening across the world.</li>
             <li>Submitted animation will go through the Technical judgment panel and eligible animation will go through the next Creative judgment panel.</li>
@@ -28,7 +28,7 @@ import DefaultLayout from '../layouts/DefaultLayout.astro';
             <p>&nbsp;</p>
             <h1 class="section-title">Rejection Criteria:</h1>
             
-            <ul style="list-style: circle;">
+            <ul class="list-disc">
             <li>Using proprietary software to create the animation.</li>
             <li>Partial submission of files mentioned in the Submission checklist.</li>
             <li>Any form of plagiarism.</li>
