--- a/src/pages/submission.astro
+++ b/src/pages/submission.astro
@@ -4,7 +4,7 @@ import DefaultLayout from '../layouts/DefaultLayout.astro';
 
 
 <DefaultLayout title="Submission">
-    <div class="container grid grid-cols-1 sm:grid-cols-4 gap-4">
+    <div class="container py-3 grid grid-cols-1 sm:grid-cols-4 gap-4">
           <!-- 1/4 Width Column -->
           <div class="col-span-1 bg-gray-300 p-4">
             <img src=""/>
