--- a/src/pages/theme.astro
+++ b/src/pages/theme.astro
@@ -4,7 +4,7 @@ import DefaultLayout from '../layouts/DefaultLayout.astro';
 
 
 <DefaultLayout title="Submission">
-    <div class="container grid grid-cols-1 sm:grid-cols-4 gap-4">
+    <div class="container py-3 grid grid-cols-1 sm:grid-cols-4 gap-4">
           <!-- 1/4 Width Column -->
           <div class="col-span-1 bg-gray-300 p-4">
             <img src=""/>
@@ -19,47 +19,135 @@ import DefaultLayout from '../layouts/DefaultLayout.astro';
 
 
                 </h1>
-                <ul style="list-style: circle;">
-                    
-                        <li>Participants can choose any subject according to their choice and create animation which can be present under the category of “Celebrating India's Innovation”
+                <div class="leading-1">
+                <p>Synfig Studio 2D animation hackathon 2024 theme is <strong>&rdquo;Celebrating India&rsquo;s innovation</strong>&rdquo;.&nbsp;</p>
+<p>Participants can create their own ideas and tell a stories by using animation under the theme <strong>&ldquo; Celebrating India&rsquo;s Innovation&rdquo;</strong></p>
+<p>Example of the topics which can come under this theme.</p>
+<p><strong>ADD following table here</strong></p>
 
-                        </li>
-                        <!-- <li>The participants have to submit animation at <a href="https://courses.fossee.in" target="_blank">https://courses.fossee.in.</a></li> -->
-                        </ul>
-                        <h1 class="section-title">Science:
-                        </h1>
-                        <ul style="list-style: circle;">
-                            
-                            <li>TBD</li>
-                            
-                            </ul>
-                            <h1 class="section-title">Science:
-                            </h1>
-                            <ul style="list-style: circle;">
-                                
-                                <li>TBD</li>
-                                
-                                </ul>
-                                <h1 class="section-title">Agriculture:
-                                </h1>
-                                <ul style="list-style: circle;">
-                                    
-                                    <li>TBD</li>
-                                    
-                                    </ul>
-                                    <h1 class="section-title">Water pollution
-                                    </h1>
-                                    <ul style="list-style: circle;">
-                                        
-                                        <li>TBD</li>
-                                        
-                                        </ul>
-              
-          
+</div>
           
         </div>
       
       
       </div>
+      <div class="container">
+
+        <table class="table-auto text-left border border-collapsed">
+            <tbody>
+            <tr>
+            <td style="width:100px">
+             <strong>Topic 01</strong> 
+            </td>
+            <td>
+             <strong>Innovation in Agriculture:</strong> 
+             Farming is getting smarter with new technology. Things like smart machines and computers help farmers grow more food using fewer resources. 
+            </td>
+            </tr>
+            <tr>
+            <td>
+             <strong>Topic 02</strong> 
+            </td>
+            <td>
+             <strong>Organic Agriculture:</strong> 
+            
+             Organic farming means growing food without using chemicals. It's better for the environment and makes healthier fruits and veggies. 
+            </td>
+            </tr>
+            <tr>
+            <td>
+             <strong>Topic 03</strong> 
+            </td>
+            <td>
+             <strong>Green Revolution:</strong> 
+            
+             The Green Revolution was a big change in farming. It brought new kinds of crops and better ways of growing food. But some people worry it might not be good for the earth in the long run. 
+            </td>
+            </tr>
+            <tr>
+            <td>
+             <strong>Topic 04</strong> 
+            </td>
+            <td>
+             <strong>Solar Power in India:</strong> 
+            
+             India is using sunlight to make power. This helps the country have more energy and is good for the planet. They use big panels to catch the sunlight and turn it into electricity. 
+            </td>
+            </tr>
+            <tr>
+            <td>
+             <strong>Topic 05</strong> 
+            </td>
+            <td>
+             <strong>Financial Education Awareness in Youth:</strong> 
+            
+             Knowing how to handle money is important. We teach young people about money&mdash;how to save it, spend it wisely, and plan for the future. 
+            </td>
+            </tr>
+            <tr>
+            <td>
+             <strong>Topic 06</strong> 
+            </td>
+            <td>
+             <strong>Skilled Youth for Nation Building:</strong> 
+            
+             We want young people to have lots of skills. Learning different things helps them start businesses, create new ideas, and make our country <strong>better.</strong> 
+            </td>
+            </tr>
+            <tr>
+            <td>
+             <strong>Topic 07</strong> 
+            </td>
+            <td>
+             <strong>Social Responsibilities &amp; Social Issues:</strong> 
+            
+             Being responsible means doing things to help others and solve problems. We should care about things like helping people who don't have enough food or making sure everyone can go to school. 
+            </td>
+            </tr>
+            <tr>
+            <td>
+             <strong>Topic 08</strong> 
+            </td>
+            <td>
+             <strong>Save Nature and Environment Around You:</strong> 
+            
+             Nature is all the trees, animals, and air around us. We should take care of it by not littering, planting trees, and using less plastic. It helps keep the Earth healthy. 
+            </td>
+            </tr>
+            <tr>
+            <td>
+             <strong>Topic 09</strong> 
+            </td>
+            <td>
+             <strong>Developing Villages:</strong> 
+            
+             Villages are smaller towns. We want to make them better by building schools, hospitals, and helping people learn new things. This helps everyone live a good life. 
+            </td>
+            </tr>
+            <tr>
+            <td>
+             <strong>Topic 10</strong> 
+            </td>
+            <td>
+             <strong>Strong Indian Culture Among Society:</strong> 
+            
+             Indian culture is all the cool things that make India special. We want to keep these traditions alive by celebrating festivals, learning about our history, and being proud of who we are. 
+            </td>
+            </tr>
+            </tbody>
+            </table>
+             &nbsp; 
+</div>
+<style>
+    tr,td{
+        border: 1px solid black;
+        padding: 10px;
+    }
+    @media  (min-width: 600px;) {
+        tr,td{
       
+        padding: auto;
+    }
+    }
+</style>
 </DefaultLayout>
