--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,7 +26,7 @@ const currentYear = new Date().getFullYear()
     
 <!-- <section id="footer" class="site-footer">
   <footer class="container mx-auto sm:px-4 max-w-full mx-auto sm:px-4 py-5 site-footer pl-5 pr-4"> -->
-     <div class="flex rounded pt-4 flex-wrap" style="background-color:#434343;">
+     <div class="flex rounded pt-4 pb-4 flex-wrap" style="background-color:#434343;">
         <div class="sm:w-1/2 pl-3">
            <ul class="list-unstyled text-small">
               <li><a class="text-gray-700" href="https://fossee.in" target="_blank">FOSSEE</a></li>
@@ -34,12 +34,12 @@ const currentYear = new Date().getFullYear()
               <li><a class="text-gray-700" href="https://spoken-tutorial.org" target="_blank">Spoken Tutorial</a></li>
            </ul>
         </div>
-        <div class="sm:w-1/4 pr-4 pl-4 py-3">
-           <h5 class="text-white">Resources</h5>
+        <div class="sm:w-1/4 pr-4 pl-4">
+           <!-- <h5 class="text-white">Resources</h5> -->
            <ul class="list-unstyled text-small">
               <li><a class="text-gray-700" href="https://www.synfig.org/" target="_blank">Synfig.org</a></li>
               <li><a class="text-gray-7 00" href="https://spoken-tutorial.org" target="_blank">Spoken Tutorial</a></li>
-              <li><a class="text-gray-700" href="https://forums.fossee.in/" target="_blank">Fossee Forum</a></li>
+              <li><a class="text-gray-700" href="https://discuss.fossee.in/" target="_blank">Fossee Forum</a></li>
               <li><a class="text-gray-700" href="https://forums.spoken-tutorial.org" target="_blank">Spoken Tutorial Forum</a></li>
            </ul>
         </div>
@@ -63,19 +63,19 @@ const currentYear = new Date().getFullYear()
            </small>
         </div> -->
         </div>
+        <div class="text-sm py-3">
+         <p class="text-center">This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License.</p>
+         <p class="text-center">The FOSSEE project is funded by the National Mission on Education through ICT, Ministry of Education, Government of India.</p>
+      
+      </div>
       </section>  
   </footer>
-<div class="container text-sm flex items-center justify-center py-3">
-   This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License. <br/>
-The FOSSEE project is funded by the National Mission on Education through ICT, <br/>
-Ministry of Education, Government of India.
 
-</div>
 <style lang="css">
   li a{
       color:white;
    }
    li a:hover{
-      color: red;
+      color: rgb(97, 102, 246);
    }
 </style>
