--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -9,7 +9,7 @@ import { Image } from 'astro:assets'
   <div class="container">
     <a href="/" class="flex items-center gap-2 !no-underline">
       <!-- <Image src="https://cfd.fossee.in/sites/default/files/logo_for_web_3.png" alt="Your Logo" width="100" height="100" /> -->
-      <span class="font-bold"></span>
+      <span class="font-bold text-green-600 hover:text-green-300">SS2DH-2024</span>
     </a>
     <div class="wrapper">
       <nav class="desktop-menu" aria-label="Main navigation desktop">
