--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,6 +18,7 @@ import focal from '../images/focal.png'
 import spoken from '../images/spoken.png'
 import IITB from '../images/IITB.png'
 import FOSSEE from '../images/FOSSEE.png'
+import posterpdf from '../images/SS2DH-Pstr03.pdf'
 
 
 
@@ -179,8 +180,8 @@ import FOSSEE from '../images/FOSSEE.png'
 
         <!-- Content for the second column (.col-6) -->
         <!-- <img src="../images/poster.png" alt="poster"> -->
-        <img src={poster.src} alt="poster" decoding="async" style="height:200px" />
-     
+       <a href={posterpdf}> <img src={poster.src} alt="poster" decoding="async" style="height:200px" />
+       </a>
     </div>
       <div class="py-3 w-full sm:w-1/2">
         <!-- Content for the first column (.col-9) -->
