--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -99,7 +99,7 @@ import posterpdf from '../images/SS2DH-Pstr03.pdf'
       <div class="py-3 w-full sm:w-1/2">
         <!-- Content for the first column (.col-9) -->
         <h1 class="section-title">What is the Synfig Studio 2D animation Hackathon?</h1>
-        <p class="text-justify">During the Hackathon the participants will create an original 2D animated short movie of about 3 mins duration using Synfig Studio. You should make the animation (graphics, audio, etc.) using ONLY open source software. You can make the narration in English or in the 22 scheduled Indian languages.</p>
+        <p class="text-justify">During the Hackathon the participants will create an original 2D animated short movie of about 3 mins duration using Synfig Studio. You should make the animation (graphics, audio, etc.) using ONLY open source software. You can make the narration in English or in the <span class="text-blue-800">22 scheduled Indian languages</span>.</p>
       <div class="bg-green-400 text-2xl mt-1 p-2">
 <p>Guiding sessions to the participants on how to use Synfig Studio</p>
 <p><strong>Dates: 22 March and 4 April 2024</strong></p>
@@ -125,7 +125,7 @@ import posterpdf from '../images/SS2DH-Pstr03.pdf'
 
         <!-- Content for the second column (.col-6) -->
        
-        <img src={eligibility.src} alt="eligibility" decoding="async" style="width:360px"/>
+        <img src={eligibility.src} alt="eligibility" decoding="async" style="width:300px;height:268px"/>
      
     </div>
       <div class="py-3 w-full sm:w-1/2">
@@ -153,10 +153,10 @@ import posterpdf from '../images/SS2DH-Pstr03.pdf'
         <!-- Content for the first column (.col-9) -->
         <h1 class="section-title">Some Helpful Resources for Hackathon:</h1>
         <div class="text-justify"><ul class="list-disc">
-          <li class="mb-2">Self learn Synfig Studio using Spoken Tutorials. These are available in English, Hindi, Kannada, Marathi, Malayalam, Tamil and Telugu.</li>
-          <li class="mb-2">For making the animation, if you want to create graphics, record audio, etc., you can use some other software. But as there is a requirement to strictly use Open Source Software in this hackathon, you can use GIMP, Audacity, Inkscape, Openshot video editor etc. for the same. You can self learn these software using the Spoken Tutorials which are freely available. These are available in English, Hindi, Kannada, Marathi, Malayalam, Tamil and Telugu.</li>
-          <li class="mb-2">For help in installing Synfig Studio, please click here.</li>
-          <li class="mb-2">Refer graphics from our FOCAL (free and open source creative art library) repository.</li>
+          <li class="mb-2">Self learn Synfig Studio using <span class="text-blue-800"><a href="https://spoken-tutorial.org/" target="_blank">Spoken Tutorials</a></span>. These are available in English, Hindi, Kannada, Marathi, Malayalam, Tamil and Telugu.</li>
+          <li class="mb-2">For making the animation, if you want to create graphics, record audio, etc., you can use some other software. But as there is a requirement to strictly use Open Source Software in this hackathon, you can use <span class="text-blue-800">GIMP, Audacity, Inkscape, Openshot video editor</span> etc. for the same. You can self learn these software using the Spoken Tutorials which are freely available. These are available in <span class="text-blue-800">English, Hindi, Kannada, Marathi, Malayalam, Tamil and Telugu</span>.</li>
+          <li class="mb-2">For help in installing Synfig Studio, please <a href="">click here</a>.</li>
+          <li class="mb-2">Refer graphics from our <span class="text-blue-800">FOCAL (free and open source creative art library)</span> repository.</li>
           </ul></div>
       </div>
       <div class="py-3 px-3 w-full sm:w-1/2 flex items-center justify-center">
@@ -164,7 +164,7 @@ import posterpdf from '../images/SS2DH-Pstr03.pdf'
 
           <!-- Content for the second column (.col-6) -->
           <!-- <img src="../images/resources.png" alt="img"> -->
-          <img src={resources.src} alt="resources" decoding="async" style="height:340px"/>
+          <img src={resources.src} alt="resources" decoding="async" style="height:285px;weight:404px"/>
        
       </div>
     </div>
@@ -180,7 +180,7 @@ import posterpdf from '../images/SS2DH-Pstr03.pdf'
 
         <!-- Content for the second column (.col-6) -->
         <!-- <img src="../images/poster.png" alt="poster"> -->
-       <a href={posterpdf}> <img src={poster.src} alt="poster" decoding="async" style="height:200px" />
+       <a href={posterpdf} target="_blank"> <img src={poster.src} alt="poster" decoding="async" style="height:200px" />
        </a>
     </div>
       <div class="py-3 w-full sm:w-1/2">
@@ -283,7 +283,7 @@ import posterpdf from '../images/SS2DH-Pstr03.pdf'
         <div class="py-3">
            <h1 class="section-title">Previous hackathon Videos:</h3>
         </div>
-<p class="text-justify">The videos mentioned below are the award winning entries under the "Synfig Studio 2D Animation Hackathon" that took place in January 2021. These videos are provided as samples only, and to check the new Theme for " Synfig Studio 2d Animation Hackathon 2024. (Theme:  Celebrating India's innovation)</p>
+<p class="text-justify">The videos mentioned below are the award winning entries under the "Synfig Studio 2D Animation Hackathon" that took place in January 2021. These videos are provided as samples only, and to check the new Theme for " Synfig Studio 2d Animation Hackathon 2024. <span class="text-red-700">(Theme:  Celebrating India's innovation)</span></p>
         <div class="container mx-auto sm:px-4">
   <div class="flex flex-wrap ">
       <div class="md:w-1/4 pr-4 pl-4 mb-4">
@@ -346,7 +346,7 @@ import posterpdf from '../images/SS2DH-Pstr03.pdf'
     </div>
     <div class="rte-justify px-5 mx-5" >
       
-      <ul class="px-5 mx-5 text-justify list-disc leading-relaxed" style="background-color: #bbab8b;">
+      <ul class="px-5 py-5 mx-5 text-justify list-disc leading-relaxed" style="background-color: #bbab8b;">
         <li class="mb-2">The decision of the review committee and organizers in declaring the results will be final. No queries in this regard will be entertained.</li>
         <li class="mb-2">The same person can not participate in more than one team.</li>
         <li class="mb-2">If a person is found participating in more than one team, both teams will be disqualified from the Hackathon.</li>
