--- a/src/pages/theme.astro
+++ b/src/pages/theme.astro
@@ -8,7 +8,7 @@ import DefaultLayout from '../layouts/DefaultLayout.astro';
           <!-- 1/4 Width Column -->
           <div class="col-span-1 bg-gray-300 p-4">
             <img src=""/>
-            <h1 class="section-title">Theme Celebrating India's Innovation</h1>
+            <h1 class="section-title">Celebrating India's Innovation</h1>
            
         
         </div>
@@ -23,7 +23,7 @@ import DefaultLayout from '../layouts/DefaultLayout.astro';
                 <p>Synfig Studio 2D animation hackathon 2024 theme is <strong>&rdquo;Celebrating India&rsquo;s innovation</strong>&rdquo;.&nbsp;</p>
 <p>Participants can create their own ideas and tell a stories by using animation under the theme <strong>&ldquo; Celebrating India&rsquo;s Innovation&rdquo;</strong></p>
 <p>Example of the topics which can come under this theme.</p>
-<p><strong>ADD following table here</strong></p>
+
 
 </div>
           
