--- a/src/assets/scss/base/_reset.scss
+++ b/src/assets/scss/base/_reset.scss
@@ -102,8 +102,10 @@ video {
 
 table {
   width: 100%;
+  border: 2px solid transparent;
   table-layout: fixed;
 }
+
 
 [hidden] {
   display: none !important;
