--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,21 +17,20 @@ import { Icon } from 'astro-icon/components'
       <a href="/#about">About</a>
     </li> 
     <li class="menu-item">
+      <a href="/#register">Register</a>
+    </li> 
+    <li class="menu-item">
+      <a href="/#partner">Partners</a>
+    </li> 
+    <li class="menu-item">
+      <a href="/#themes">Theme</a>
+    </li> 
+    <li class="menu-item">
       <a href="/#eligibility">Eligibility</a>
     </li> 
     <li class="menu-item">
-      <a href="/#resources">Resources</a>
+      <a href="/#team">Teams</a>
     </li> 
-    <li class="menu-item">
-      <a href="/#rules">Rules and Regulation</a>
-    </li>
-    <li class="menu-item">
-      <a href="/#">Theme</a>
-    </li>
-    <li class="menu-item">
-      <a href="/#">Rewards</a>
-    </li>
-    
     <!-- <li class="menu-item">
       <a href="/result/">Result</a>
     </li> -->
@@ -39,7 +38,7 @@ import { Icon } from 'astro-icon/components'
       <a href="/alternate_result">alResult</a>
     </li> -->
     <li class="menu-item">
-      <a href="/#contact-us">Contact</a>
+      <a href="/#contact">Contact</a>
     </li> 
 
 
