--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -6,13 +6,15 @@ import SiteMeta from '../components/SiteMeta.astro'
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
 import Logoslot from '../components/Logoslot.astro'
-
+import Main from '../layouts/Main.astro'
+// import '../assets/script/script.js';
 const {
   title = 'Astro',
-  description = 'A starter project with accessibility features using Astro static site builder. Contains accessible landmarks, skip links, a dark mode color scheme, better focus outline and keyboard menu navigation.',
+  description = 'GIS Mapathon 2024',
   url,
   image = '/social-preview-image.png',
-  author = 'Mark Teekman',
+  author = 'FOSSEE',
+  keywords= 'mapathon 2024, hackathon, mapathon, gis mapathon, iot gis mapathon, iot gis mapathon 2024, IIT Bombay FOSSEE Geospatial Mapathon 2024',
 } = Astro.props
 ---
 
@@ -21,9 +23,10 @@ const {
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-
+    
     <!-- favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <script is:inline src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.8.0/flowbite.min.js"></script>
 
     <SiteMeta
       title={title}
@@ -33,11 +36,15 @@ const {
         : `https://accessible-astro.dev/${title.toLowerCase().replaceAll(' ', '-')}`}
       image={image}
       author={author}
+      keywords={keywords}
     />
+    
+
   </head>
   <body>
-  <Logoslot />
+  <!-- <Logoslot /> -->
     <Header />
+  <!-- <Main /> -->
     <main id="main-content" transition:animate="fade">
       <slot />
     </main>
@@ -116,6 +123,9 @@ html{
         color: #0000ff;
         font-weight: 400;
       }
+      // section{
+      //   padding:0px 0;
+      // }
     </style>
   </body>
 </html>
